Refactor S3 configuration and update URL extraction tests
- Removed hardcoded access and secret keys from S3Config in DockerLocalUrlExtractionTest and S3UrlBuilderTest.
- Updated S3 URL extraction tests to use the new media.porflyo.com endpoint.
- Commented out the ICU4J dependency in slug build.gradle.
- Changed SlugifySlugGenerator locale from Spanish to English and disabled transliteration.
- Upgraded GraalVM build tools version in core build.gradle.
- Added new CloudFront distribution configuration in dist.config.json and dist_raw.json.
- Created API Gateway event JSON files for v1 and v2.
- Added DynamoDB GSI configuration in gsi.json.
- Updated API handler build.gradle to include native lambda configuration and HTTP client dependency.
- Modified ApiNativeEntrypoint to use LocalLambdaEntrypoint.
- Removed old logback-test.xml and added new logback.xml for logging configuration.
- Updated authentication handler build.gradle for native lambda and HTTP client dependency.
- Enhanced handlers-common build.gradle to exclude unnecessary AWS SDK modules.
- Improved cookie extraction logic in LambdaHttpUtils.
- Added logging configuration in handlers-common.
- Updated OAuth handler build.gradle for native lambda and HTTP client dependency.
- Created new logback.xml for OAuth handler.
- Added debug logging in AuthService for better traceability.
- Updated application.yml to remove local endpoint configurations and set proper S3 bucket name.
- Removed old logback.xml in shared application resources and added new one.
- Updated build-logic dependencies to exclude Netty.
- Enhanced lambda handler gradle configuration for better performance.
- Updated environment-specific application.yml files to remove access and secret keys.
- Removed old logback-test.xml and added new logback.xml for testing.
- Created new CloudFormation templates for production API and OAuth handlers with optimized configurations.